# timetensor

./: .gitignore  README.md  pyproject.toml  shuffle_dataset.py
config/: config.yaml
datasets/: rand_indivdate.pt  test_datetimes.pt  test_values.pt  train_datetimes.pt  valid2_datetimes.pt  valid_datetimes.pt
datasets/examples/: anomaly_indivdate.pt  easy_indivdate.pt  motif_indivdate.pt  spiky_indivdate.pt
src/: dataset.py  utils.py
src/timetensor/: __init__.py  dataset.py  electricity.py  utils.py  visu.py
src/timetensor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
synthetic/: arima_simulation.py  gam_simulation.py
