[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timetensor"
version = "0.1.0"
description = "Time Series Dataset module"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Gaspard Berthelier", email = "gberthelier.projet@gmail.com"},
]
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.9.4",
    "numpy>=2.2.0",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools.packages.find]
where = ["src"]